c-corporate-footer dropdown menu links aligned correct

--- a/src/components/corporate-footer/style.less
+++ b/src/components/corporate-footer/style.less
@@ -167,6 +167,10 @@
 
         a {
           color: #1d1d1d;
+
+          &:first-child {
+            margin-left:0;
+          }
         }
 
         .dropdown-menu {
@@ -177,6 +181,7 @@
           border-radius: 0;
           margin: 0;
           box-shadow: none;
+          text-align: center;
         }
       }
       .footer-links {
